--- a/notebooks/dd_group_fairness.ipynb
+++ b/notebooks/dd_group_fairness.ipynb
@@ -370,7 +370,7 @@
    ],
    "source": [
     "# pretty printing long labels\n",
-    "pretty_rac1p = ['Alaska', 'Indian', 'Alaska-Indian', 'Asian', 'Black', 'Hawaiian', 'Other', 'Two+', 'White']\n",
+    "pretty_rac1p = ['Alaskian', 'Indian', 'Alaskian-Indian', 'Asian', 'Black', 'Hawaiian', 'Other', 'Two+', 'White']\n",
     "rac1p_2_pretty = { encoders['RAC1P'].classes_[i]:pretty_rac1p[i] for i in range(len(pretty_rac1p)) }\n",
     "rac1p_2_pretty"
    ]
