--- a/notebooks/dd_ACSIncome_group_fairness.ipynb
+++ b/notebooks/dd_ACSIncome_group_fairness.ipynb
@@ -2,46 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7d965379",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working dir:  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# if using Colab\n",
-    "try:\n",
-    "    import google.colab\n",
-    "    is_colab = True\n",
-    "    wdir = 'https://raw.githubusercontent.com/ruggieris/DD/main/'\n",
-    "    # create folder src if it does not exists\n",
-    "    !mkdir -p src\n",
-    "    !mkdir -p data\n",
-    "    # download source\n",
-    "    !wget --no-cache --backups=1 -O src/dd.py {wdir}'src/dd.py'\n",
-    "    # download dataset\n",
-    "    !wget --no-cache --backups=1 -O src/dd.py {wdir}'data/ACSIncome_v1.pckl'\n",
-    "except:\n",
-    "    is_colab = False\n",
-    "    wdir = '' # local files\n",
-    "print('Working dir: ', wdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "032961de",
    "metadata": {},
    "outputs": [],
    "source": [
     "# required modules (under Anaconda use: > conda install -c conda-forge <package>)\n",
-    "if is_colab:\n",
+    "if False:\n",
     "    !pip install pyroaring\n",
     "    !pip install pyfim \n",
     "    !pip install lightgbm\n",
@@ -69,7 +36,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# local imports\n",
-    "sys.path.append('src/' if is_colab else '../src/') # local path\n",
+    "sys.path.append('../src/') # local path\n",
     "import dd\n",
     "\n",
     "# general settings  \n",
@@ -1545,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
