--- a/notebooks/exp_tutorial.ipynb
+++ b/notebooks/exp_tutorial.ipynb
@@ -197,8 +197,8 @@
     "# black box training\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
-    "bb.fit(X_train, y_train)\n",
-    "y_pred = bb.predict(X_test)\n",
+    "bb.fit(X_train.values, y_train) # .values for numpy as to prevent warning later on\n",
+    "y_pred = bb.predict(X_test.values)\n",
     "print('Accuracy: {:.4f}'.format(accuracy_score(y_test, y_pred)))\n",
     "print('F1-score: {:.4f}'.format(f1_score(y_test, y_pred)))"
    ]
@@ -387,7 +387,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.initjs() # this is needed for colab\n",
     "x = X_test.iloc[3].values\n",
     "shap_values_single = shap_explainer.shap_values(x)\n",
     "shap.force_plot(shap_explainer.expected_value, shap_values_single, features=x, feature_names=X_test.columns)"
@@ -399,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap_values = shap_explainer(X_test)\n",
+    "shap_values = shap_explainer(X_test.iloc[3:4])\n",
     "shap.plots.waterfall(shap_values[0])"
    ]
   },
@@ -409,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.decision_plot(shap_explainer.expected_value, shap_explainer.shap_values(X_test), cols_pred, ignore_warnings=True)"
+    "shap.decision_plot(shap_explainer.expected_value, shap_explainer.shap_values(X_test[:1000]), X_test.columns, ignore_warnings=True)"
    ]
   },
   {
